Update GifDecoder, TabEnum, and version to 1.4.1
Annotated GifDecoder's read method with @SneakyThrows and adjusted URL handling. Changed ASCII_IMAGE tab's visibility flag to false. Updated plugin version in metadata and changelog to reflect bug fixes.